Bug 15995 - smbd does not cleanup on disconnect of the transport connection on lease break errors
Summary: smbd does not cleanup on disconnect of the transport connection on lease brea...
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: File services (show other bugs)
Version: 4.23.0
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Samba release manager
QA Contact: Samba QA Contact
URL: https://gitlab.com/samba-team/samba/-...
Keywords:
Depends on:
Blocks:
 
Reported: 2026-02-09 12:11 UTC by Stefan Metzmacher
Modified: 2026-06-23 10:50 UTC (History)
3 users (show)

See Also:


Attachments
Patch for v4-24-test (2.61 KB, text/plain)
2026-04-09 11:15 UTC, Stefan Metzmacher
metze: review? (slow)
vl: review+
Details
Patch for v4-23-test (2.61 KB, text/plain)
2026-04-09 11:15 UTC, Stefan Metzmacher
metze: review? (slow)
vl: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Stefan Metzmacher 2026-02-09 12:11:15 UTC
When we hit an error from sendmsg() called via:
smbd_smb2_flush_send_queue() from smbd_smb2_break_send()

We'll end up in smbXsrv_pending_break_done() and
smbXsrv_pending_break_submit() returning NT_STATUS_ABANDONED
in order to indicate that there's no more valid channel/transport
connection remaining for the smbXsrv_client.

In that case smbd stays for ever most likely sitting
in epoll_wait().
Comment 1 Samba QA Contact 2026-04-08 15:42:03 UTC
This bug was referenced in samba master:

734481e2aa9c9bb20fc9bc8734eba85d2f61be72
Comment 2 Stefan Metzmacher 2026-04-09 11:15:11 UTC
Created attachment 18938 [details]
Patch for v4-24-test
Comment 3 Stefan Metzmacher 2026-04-09 11:15:37 UTC
Created attachment 18939 [details]
Patch for v4-23-test
Comment 4 Samba QA Contact 2026-05-12 14:57:36 UTC
This bug was referenced in samba v4-24-test:

093516761f923cd5a6c185f65ef12a6c3832e894
Comment 5 Samba QA Contact 2026-05-12 15:55:13 UTC
This bug was referenced in samba v4-24-stable (Release samba-4.24.2):

093516761f923cd5a6c185f65ef12a6c3832e894
Comment 6 Samba QA Contact 2026-05-28 01:38:20 UTC
This bug was referenced in samba v4-23-test:

7827b04a473329ea47b22e65062379df02f5df35
Comment 7 Samba QA Contact 2026-06-23 10:50:17 UTC
This bug was referenced in samba v4-23-stable (Release samba-4.23.9):

7827b04a473329ea47b22e65062379df02f5df35